# boax

./: .readthedocs.yml  README.md  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-publish.yml  tests.yml
boax/: __init__.py  typing.py  util.py  version.py
boax/acquisitions/: __init__.py  alias.py  base.py
boax/acquisitions/functions/: analytic.py  monte_carlo.py
boax/acquisitions/surrogates/: __init__.py  alias.py  base.py
boax/core/: __init__.py
boax/core/distributions/: __init__.py  beta.py  gamma.py  multivariate_normal.py  normal.py  poisson.py  transformed.py  uniform.py
boax/core/models/: base.py  gaussian_process.py
boax/core/objectives/: __init__.py  alias.py
boax/core/optimization/: __init__.py
boax/core/optimizers/: __init__.py  alias.py  base.py
boax/core/samplers/: __init__.py  alias.py  base.py
boax/experiments/: __init__.py  alias.py  base.py
boax/experiments/benchmarks/: __init__.py  alias.py  base.py  functions.py
boax/experiments/functions/: __init__.py  bandit.py  optimization.py
boax/experiments/search_spaces/: __init__.py  base.py  utils.py
boax/optimization/: __init__.py  construction.py
boax/optimization/acquisitions/: __init__.py  alias.py  base.py  transformed.py
boax/optimization/constraints/: alias.py  base.py
boax/optimization/maximizers/: __init__.py  alias.py  base.py  util.py
boax/optimization/optimizers/: __init__.py  alias.py  base.py  construction.py
boax/optimization/policies/: __init__.py  alias.py  base.py
boax/optimization/samplers/: __init__.py  alias.py  base.py
boax/optimization/spaces/: __init__.py  alias.py  base.py
boax/policies/: alias.py  base.py
boax/policies/believes/: __init__.py  alias.py  base.py
boax/prediction/: __init__.py  construction.py
boax/prediction/bijectors/: __init__.py  alias.py  base.py  transformed.py
boax/prediction/kernels/: __init__.py  alias.py  base.py  transformed.py
boax/prediction/likelihoods/: __init__.py  alias.py  base.py
boax/prediction/means/: __init__.py  alias.py  base.py
boax/prediction/models/: __init__.py  alias.py  base.py  gaussian_process.py  transformed.py
boax/prediction/objectives/: __init__.py  alias.py  base.py  transformed.py
boax/prediction/processes/: __init__.py  alias.py  base.py
boax/utils/: __init__.py  functools.py  math.py  stats.py  typing.py
bojax/: version.py
bojax/_src/: test_util.py  typing.py  util.py
bojax/_src/prediction/: __init__.py
bojax/optimization/acquisitions/: __init__.py
bojax/optimization/acquistions/: __init__.py
bojax/optimization/maximizers/: __init__.py
bojax/optimization/space/: __init__.py
bojax/optimization/spaces/: __init__.py
bojax/prediction/bijectors/: __init__.py
bojax/prediction/kernels/: __init__.py
bojax/prediction/means/: __init__.py
bojax/prediction/processes/: __init__.py
docs/source/: conf.py  index.rst
docs/source/api_reference/: boax.acquisitions.rst  boax.core.distributions.rst  boax.core.models.rst  boax.core.objectives.rst  boax.core.optimization.rst  boax.core.optimizers.rst  boax.core.prediction.rst  boax.core.rst  boax.core.samplers.rst  boax.experiments.rst  boax.optimization.rst  boax.policies.rst  boax.prediction.rst  index.rst
docs/source/guides/: Bandit_Optimization.ipynb  Batched_Optimization.ipynb  Bayesian_Optimization.ipynb  Constrained_Airplane_Design.ipynb  Constrained_Optimization.ipynb  Fantasy.ipynb  Fitting_With_Priors.ipynb  Gaussian_Process_Regression.ipynb  Gaussian_Process_Regression_on_two_dimensional_data.ipynb  Getting_Started.ipynb  Hyperparameter_Tuning.ipynb  Multi-Fidelity_Optimization.ipynb  Untitled.ipynb  index.rst
docs/source/notebooks/: Gaussian_Process_Regression.ipynb  (+1 more)
examples/: Bayesian_Optimization.ipynb
notebooks/: Gaussian_Process_Regression.ipynb
tests/acquisitions/: acquisitions_test.py
tests/core/: samplers_test.py
tests/core/models/: gaussian_process_test.py  (+4 more)
tests/experiments/: search_spaces_test.py
tests/optimization/: acquisitions_test.py  constraints_test.py  maximizers_test.py  optimization_construction_test.py  optimizers_test.py  samplers_test.py  spaces_test.py
tests/policies/: believes_test.py  policies_test.py
tests/prediction/: bijectors_test.py  kernels_test.py  likelihoods_test.py  means_test.py  models_test.py  objectives_test.py  prediction_construction_test.py  processes_test.py
(+181 files in other folders)
