[project]
name = "boax"
description = "Boax is a Bayesian Optimization library for JAX."
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Lando Löper", email = "hello.lando@icloud.com" },
]
keywords = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "jax (<=0.4.38)",
    "chex (>=0.1.88,<0.2.0)",
    "optax (>=0.2.4,<0.3.0)",
]
dynamic = ["version"]

[project.urls]
homepage = "https://github.com/Lando-L/boax"

[tool.poetry]
version = "0.0.0"

[tool.poetry.requires-plugins]
poetry-dynamic-versioning = { version = ">=1.0.0,<2.0.0", extras = ["plugin"] }

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.6"

[tool.poetry.group.tests.dependencies]
absl-py = "^2.1.0"
pytest = "^8.3.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.docs.dependencies]
jupyter = "^1.1.1"
matplotlib = "^3.10.0"
myst-nb = "^1.2.0"
scikit-learn = "^1.6.1"
sphinx = "^8.1.3"
sphinx-autodoc-typehints = "^3.0.1"
sphinx-book-theme = "^1.1.3"

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
line-length = 80
indent-width = 2

[tool.ruff.lint]
select = ["F401", "I001"]
ignore = []
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"